Bug 100075 - Spacing wrong in document read in docx format due to incorrect height of textbox
Summary: Spacing wrong in document read in docx format due to incorrect height of textbox
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0 target:5.4.0.2
Keywords: filter:docx
Depends on:
Blocks: DOCX-Textbox
  Show dependency treegraph
 
Reported: 2016-05-26 20:10 UTC by Oliver Sander
Modified: 2020-06-05 12:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
The docx file in question (83.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-05-26 20:10 UTC, Oliver Sander
Details
The document as shown by MSOffice 2010 (60.80 KB, application/pdf)
2016-05-26 20:11 UTC, Oliver Sander
Details
The document as shown by LibreOffice 5.1.3 (97.51 KB, application/pdf)
2016-05-26 20:11 UTC, Oliver Sander
Details
minimal example containing only the problematic textbox (14.60 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-04-21 10:23 UTC, Patrick Jaap
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Sander 2016-05-26 20:10:54 UTC
Created attachment 125311 [details]
The docx file in question

I have a letter template from my university administration in docx format, which looks slightly different in MSOffice 2010 and LibreOffice 5.1.3.  In particular, 
LibreOffice gets the vertical spacing wrong between the 'Adressfeld' and the 'Betreffzeile'.

Example documents are attached.  The document actually shows four different problems; I will open separate bugs for the other three.

Thanks for your consideration.
Comment 1 Oliver Sander 2016-05-26 20:11:14 UTC
Created attachment 125312 [details]
The document as shown by MSOffice 2010
Comment 2 Oliver Sander 2016-05-26 20:11:38 UTC
Created attachment 125313 [details]
The document as shown by LibreOffice 5.1.3
Comment 3 Buovjaga 2016-05-27 15:05:59 UTC
Confirmed.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 60041cb237ea73c2c1885dd6afd99d88780c2dfc
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 26th 2016
Comment 4 Oliver Sander 2016-10-21 18:00:47 UTC
Reproduce in

LibreOfficeDev 5.3.0.0.alpha1 f4ca1573fcf445164c068c1046ab5d084e1b005f
Comment 5 Patrick Jaap 2017-04-18 07:40:00 UTC
The wrong spacing in the LO render is caused by the textbox "Adressfeld". In MSO it has a hight of a few lines and in LO it is only one line in height.
Although, the width of the box is right.

So there is something wrong in importing or shrinking of this textbox.
Comment 6 Patrick Jaap 2017-04-21 10:23:38 UTC
Created attachment 132728 [details]
minimal example containing only the problematic textbox

I uploaded a minimal example which contains a single textbox. In LO the box is shrinked, in MSO it is a few lines in height.
Comment 7 Commit Notification 2017-06-27 13:39:48 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d5b19100ca4d3670d1b5367e8000739af60a6892

tdf#100075 DOCX frame height rule updated

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Oliver Sander 2017-06-29 09:59:57 UTC
I confirm that the problem is fixed in git master.

Will this be backported to 5.4?
Comment 9 Buovjaga 2017-06-29 10:03:33 UTC
Vasily: do you want to backport to 5.4? I guess that would realistically be 5.4.1, then.
Comment 10 Commit Notification 2017-06-29 12:17:46 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94c533bc59a8fe50b3d44c3200646f99269faab5&h=libreoffice-5-4

tdf#100075 DOCX frame height rule updated

It will be available in 5.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.