tdf#100075 DOCX frame height rule updated

According to "[MS-OE376]: Office Implementation Information for
ECMA-376 Standards Support" Word treats default value for
hRule attribute in a different way: if frame height is missing it
is "auto" (as in specification), but if frame height exist, then
default value for hRule is "atLeast".

Change-Id: I0ce30b61d1a6b85febbbd8a6bf5af3eb1bb2767f